# database-configurations-for-IFS4205-testing

./: manage.py  pyproject.toml
accounts/migrations/: 0001_initial.py
database_routers/: default.py  main.py  researchs.py
database_sql/: traceit_mainsystem_createtable.sql  traceit_research_createtable.sql
main/: models.py
main/migrations/: 0001_initial.py
researchs/: models.py
researchs/migrations/: 0001_initial.py
roles_management/: setup_db_roles.py
sampledata/: generate.py  generate_relations.sql
traceitdb/: asgi.py  settings.py  urls.py  wsgi.py
